[WFCORE-5861] Add the standard server JPMS settings to jboss-cli-client.jar so it can embed the server on SE 16+
Configure the settings in properties in the root pom so they can be shared between the bootable-jar/boot/pom.xml and the cli/pom.xml